@@ -6,7 +6,7 @@ import com.robertx22.mine_and_slash.uncommon.interfaces.IAutoLocName;
 public enum Chats implements IAutoLocName {
     MapStarted("Adventure Map Successfully Sacrificed"),
     Youneedheartstone("You need a hearthstone item to attune to this block."),
-    NoSpaceForPortal("No Space for the portals. Please make room."),
+    NoSpaceForPortal("No Space for the portals. Please make 13x13 wide room."),
     Dev_tools_enabled_contact_the_author("Devs tools enabled, if you see this please contact the author of Mine and Slash [robertx22], he forgot to disable them!"),
     Ran_Out_Of_Time("Ran Out Of Time"),
     You_have_attuned_to_this_Altar("You have attuned to this Altar"),
